# Stacked

./: Abstract Syntax Tree.h  AbstractSyntaxTree.h  CMakeLists.txt  CommandLineArguments.cpp  CommandLineArguments.h  Error.cpp  Error.h  IStream.h  InstructionBlock.cpp  InstructionBlock.h  Makefile  README.md  Signal.cpp  Signal.h  Signals.h  StackedInterpreter.cpp  StackedInterpreter.h  StackedLanguageManager.cpp  StackedLanguageManager.h  main.stack  stacked.cpp
Abstract Syntax Tree/: Expression.cpp  Expression.h  If.cpp  Instruction.cpp  Instruction.h  InstructionBlock.cpp  NewStack.h  PopStack.h  Program.cpp  Program.h  PushStack.cpp  PushStack.h  ResetStack.cpp  SignalInstruction.cpp  While.cpp
Abstract Syntax Tree/Comparation/: Equal.cpp  Equal.h
Abstract Syntax Tree/Expression/: Addition.cpp  Addition.h  Division.cpp  Division.h  Mod.h  Multiplication.cpp  Subtraction.cpp
AbstractSyntaxTree/: Comparation.cpp  Comparation.h  ConstNumber.cpp  ConstNumber.h  Expression.cpp  Expression.h  If.cpp  If.h  Instruction.cpp  Instruction.h  InstructionBlock.cpp  InstructionBlock.h  InvalidInstruction.cpp  InvalidInstruction.h  NewStack.cpp  NewStack.h  NextElement.cpp  NextElement.h  PopStack.cpp  PopStack.h  Program.cpp  Program.h  PushStack.cpp  PushStack.h  ResetStack.cpp  ResetStack.h  SignalInstruction.cpp  SignalInstruction.h  While.cpp  While.h  file
AbstractSyntaxTree/Comparation/: Equal.cpp  Equal.h  GreaterThan.cpp  GreaterThan.h  LessThan.cpp  LessThan.h  NotEmpty.cpp  NotEmpty.h  NotEqual.cpp  NotEqual.h
AbstractSyntaxTree/Expression/: Addition.cpp  Addition.h  Division.cpp  Division.h  Mod.cpp  Mod.h  Multiplication.cpp  Multiplication.h  Subtraction.cpp  Subtraction.h
Stacked/: CommandLineArguments.cpp  CommandLineArguments.h  DebugStackedLanguageManager.cpp  DebugStackedLanguageManager.h  Signals.h  Version.h  stacked.cpp
Stream/: FileStream.cpp  FileStream.h  IStream.cpp  IStream.h
examples/: main.stack  max.stack
include/: AbstractSyntaxTree.h  Signal.h  StackedInterpreter.h  StackedLanguageManager.h
include/AbstractSyntaxTree/: Comparation.h  ConstNumber.h  Expression.h  If.h  Instruction.h  InstructionBlock.h  InvalidInstruction.h  NewStack.h  NextElement.h  PopStack.h  Program.h  PushStack.h  ResetStack.h  SignalInstruction.h  While.h
include/AbstractSyntaxTree/Comparation/: Equal.h  GreaterThan.h  LessThan.h  NotEmpty.h  NotEqual.h
include/AbstractSyntaxTree/Expression/: Addition.h  Division.h  Mod.h  Multiplication.h  Subtraction.h
include/Stacked/: AbstractSyntaxTree.h  Error.h  IStackedLanguageManager.h  LanguageVersion.h  Signal.h  Stack.h  StackedInterpreter.h  StackedLanguageManager.h
include/Stacked/AbstractSyntaxTree/: Comparation.h  ConstNumber.h  Expression.h  If.h  Instruction.h  InstructionBlock.h  InvalidInstruction.h  NewStack.h  NextElement.h  PopStack.h  Program.h  PushStack.h  ResetStack.h  SignalInstruction.h  While.h
include/Stacked/AbstractSyntaxTree/Comparation/: Equal.h  GreaterThan.h  LessThan.h  NotEmpty.h  NotEqual.h
include/Stacked/AbstractSyntaxTree/Expression/: Addition.h  Division.h  Mod.h  Multiplication.h  Subtraction.h
include/Stacked/Stream/: FileStream.h  IStream.h
include/Stream/: FileStream.h
src/: Error.cpp  Signal.cpp  Stack.cpp  StackedInterpreter.cpp  StackedLanguageManager.cpp
src/AbstractSyntaxTree/: Comparation.cpp  ConstNumber.cpp  Expression.cpp  If.cpp  Instruction.cpp  InstructionBlock.cpp  InvalidInstruction.cpp  NewStack.cpp  NextElement.cpp  PopStack.cpp  Program.cpp  PushStack.cpp  ResetStack.cpp  SignalInstruction.cpp  While.cpp
src/AbstractSyntaxTree/Comparation/: Equal.cpp  GreaterThan.cpp  LessThan.cpp  NotEmpty.cpp  NotEqual.cpp
src/AbstractSyntaxTree/Expression/: Addition.cpp  Division.cpp  Mod.cpp  Multiplication.cpp  Subtraction.cpp
src/Stream/: FileStream.cpp  IStream.cpp
